<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:layout_weight="1.0">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/scrollView"
        android:layout_toStartOf="@+id/dialogButtonClose">

        <TextView
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000" />
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialogButtonClose"
        android:text="@string/dialog_dialogButtonClose"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@+id/buttonsTable"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollView"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonsTable">

        <Button
            android:id="@+id/dialogButtonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_dialogButtonSearch"
            android:layout_below="@+id/scrollView"/>

        <Button
                android:id="@+id/dialogButtonWWW"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_dialogButtonWWW"
                android:layout_toEndOf="@id/dialogButtonSearch"
                android:layout_below="@+id/scrollView" />
    </TableLayout>

</RelativeLayout>